# ct-control-program-math

./: README.md  ct-control-program-math.cabal
app/: Main.hs
src/: BiCCC.hs  MCoalgebra.hs  PrAlgebra.hs
test/: PrAlgebraTest.hs
