cabal-version:      2.4
name:               ct-control-program-math
version:            0.1.0.0
synopsis:           Working out the category theory of control software.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Timothy A. V. Teatro
maintainer:         @timtro (Github)

-- A copyright notice.
-- copyright:
category:           Control
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PrAlgebra

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        data-fix

    hs-source-dirs:   src
    default-language: Haskell2010

executable ct-control-program-math
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        ct-control-program-math,
        data-fix

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ct-control-program-math-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          PrAlgebraTest.hs
    build-depends:
        base ^>=4.15.1.0,
        data-fix
